--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <a href="#" class="logo logo_place_header"><img src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикум"></a>
+      <a class="logo logo_place_header" href="#"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
       <a href="#" class="header__link">Узнать &rarr;</a>
@@ -75,6 +75,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <!-- Исправил с position: relative; и top: 70px; на margin: 70px 0 0 0;-->
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
         <img class="feynman__pic" src="./images/feynman.png" alt="Фото Фейнмана">
       </section>
@@ -130,7 +131,8 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a href="#" class="logo logo_place_footer"><img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум"></a>
+          <a class="logo logo_place_footer" href="#"></a>
+          <!-- Переделал здесь и в header (для идентичности) через background-image. Размеры стали, как в макете. По другому, как я понимаю необходимо многое менять в коде. -->
           <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -143,6 +145,7 @@
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
+          <!-- Форматирование шрифта поехало, видимо из-за применения h3 в дочернем блоке. Font-size был задан для родительского блока -->
           <ul class="footer__column-links">
               <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Facebook">Facebook</a></li>
               <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтакте">ВКонтакте</a></li>
