--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <a class="logo logo_place_header" href="#"></a>
+      <a class="logo logo_place_header" href="#" target="_blank" rel="noopener"></a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-      <a href="#" class="header__link">Узнать &rarr;</a>
+      <a href="#" class="header__link" target="_blank" rel="noopener">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка (картина)">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -29,6 +28,67 @@
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Изображение книги">
+            <h3 class="cards__titel">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Изображение скульптуры">
+            <h3 class="cards__titel">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение холла">
+            <h3 class="cards__titel">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Изображение человека в поисках ответа">
+            <h3 class="cards__titel">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Изображение стопка книг">
+            <h3 class="cards__titel">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <div class="video__iframe"><iframe id="ytplayer" type="text/html" width="515" height="316"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            frameborder="0" allowfullscreen></iframe></div>
+          <div class="video__iframe"><iframe id="ytplayer" type="text/html" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+            frameborder="0" allowfullscreen></iframe></div>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link" target="_blank" rel="noopener">Подробнее &rarr;</a>
+        <img class="feynman__pic" src="./images/feynman.png" alt="Фото Фейнмана">
       </section>
 
       <section class="digits">
@@ -72,12 +132,19 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <!-- Исправил с position: relative; и top: 70px; на margin: 70px 0 0 0;-->
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img class="feynman__pic" src="./images/feynman.png" alt="Фото Фейнмана">
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги &#34;Весь мир - школа&#34;">
+            <a href="#" class="khan__buy-link" target="_blank" rel ="noopener">Купить книгу &rarr;</a>
+          </div>
+
+        </div>
       </section>
 
       <section class="kaufman">
@@ -125,31 +192,41 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <nav class="resources__logo-zone">
+          <a class="resources__logo resources__logo_arzamas" href="#" target="_blank" rel="noopener"></a>
+          <a class="resources__logo resources__logo_nplus1" href="#" target="_blank" rel="noopener"></a>
+          <a class="resources__logo resources__logo_strelka" href="#" target="_blank" rel="noopener"></a>
+          <a class="resources__logo resources__logo_polka" href="#" target="_blank" rel="noopener"></a>
+        </nav>
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a class="logo logo_place_footer" href="#"></a>
-          <!-- Переделал здесь и в header (для идентичности) через background-image. Размеры стали, как в макете. По другому, как я понимаю необходимо многое менять в коде. -->
+          <a class="logo logo_place_footer" href="#" target="_blank" rel="noopener"></a>
           <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О практикуме</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank" rel="noopener">Главная</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank" rel="noopener">Концепция</a></li>
+            <li><a class="footer__column-link" href="#" target="_blank" rel="noopener">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <!-- Форматирование шрифта поехало, видимо из-за применения h3 в дочернем блоке. Font-size был задан для родительского блока -->
           <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Facebook">Facebook</a></li>
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтакте">ВКонтакте</a></li>
-              <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Instagram">Instagram</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank" rel="noopener"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип Facebook">Facebook</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank" rel="noopener"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВКонтакте">ВКонтакте</a></li>
+              <li><a class="footer__column-link" href="#" target="_blank" rel="noopener"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Instagram">Instagram</a></li>
           </ul>
         </nav>
       </div>
@@ -157,3 +234,5 @@
   </div>
 </body>
 </html>
+
+<!-- Сделана вся верстка. Сделать: 2) Анимации 3) Клики по ссылкам  -->
