ПР2. Версия №2 на ревью.

--- a/index.html
+++ b/index.html
@@ -33,45 +33,41 @@
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-        <div class="cards">
-          <div class="cards__item">
+        <ul class="cards">
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Изображение книги">
             <h3 class="cards__titel">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Изображение скульптуры">
             <h3 class="cards__titel">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Изображение холла">
             <h3 class="cards__titel">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Изображение человека в поисках ответа">
             <h3 class="cards__titel">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-          </div>
-          <div class="cards__item">
+          </li>
+          <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Изображение стопка книг">
             <h3 class="cards__titel">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <div class="video__iframe"><iframe id="ytplayer" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/5MgBikgcWnY"
-            frameborder="0" allowfullscreen></iframe></div>
-          <div class="video__iframe"><iframe id="ytplayer2" type="text/html" width="515" height="316"
-            src="https://www.youtube.com/embed/arj7oStGLkU"
-            frameborder="0" allowfullscreen></iframe></div>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -198,12 +194,12 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
-          <a class="resources__logo resources__logo_arzamas" href="#" target="_blank" rel="noopener"></a>
-          <a class="resources__logo resources__logo_nplus1" href="#" target="_blank" rel="noopener"></a>
-          <a class="resources__logo resources__logo_strelka" href="#" target="_blank" rel="noopener"></a>
-          <a class="resources__logo resources__logo_polka" href="#" target="_blank" rel="noopener"></a>
-        </nav>
+        <div class="resources__logo-zone">
+          <a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Логот Арзамас"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="images/logo/resources-n1.svg" alt="Логот N+1"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Логот STRELKA"></a>
+          <a href="#" target="_blank" rel="noopener"><img class="resources__logo" src="images/logo/resources-polka.svg" alt="Логот ПОЛКА"></a>
+        </div>
       </section>
     </main>
 
