--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <a class="logo logo_place_footer" href="#" target="_blank" rel="noopener"></a>
-          <p class="footer__author">&copy;2019. Виктор Абанькин</p>
+          <p class="footer__author">&copy;2021. Вячеслав Бардаков</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О практикуме</h3>
